# postgres_control_tower

./: .env.example  .gitignore  PLAN.md  README.md
.cursor/rules/: 00-project.mdc  10-backend-python.mdc  20-frontend-react.mdc  30-docs.mdc  90-git.mdc
agent/: pyproject.toml
agent/pct_agent/: __init__.py  cli.py  config.py  heartbeat.py  log_record.py  main.py  manager_client.py  parsers.py  pt_stalk.py  runner.py  runtime_state.py  shipper.py  tailer.py
agent/pct_agent/collectors/: __init__.py  host_metrics.py  log_files.py  os_logs.py  patroni.py  pgbackrest.py  wal.py
agent/tests/: test_pt_stalk.py
deploy/: README.md
deploy/compose/: .env.example  docker-compose.yml
deploy/compose/conf/agent-patroni-1/: config.yaml
deploy/compose/conf/agent-patroni-2/: config.yaml
deploy/docker/: Dockerfile.agent  Dockerfile.manager  Dockerfile.patroni  Dockerfile.pg-with-pgbr  entrypoint-agent.sh  entrypoint-manager.sh  entrypoint-pg-standalone.sh
deploy/scripts/: bootstrap.sh  demo-backup.sh  demo-failures.sh  demo-insert.sh  reset.sh  teardown.sh
docs/: README.md  agent-setup.md  api.md  architecture.md  conflicts-resolved.md  deployment.md  hardening.md  log-sources.md  safety-and-rbac.md  troubleshooting.md
docs/_archive/: log-collector.md  pgbackrest-ui-plan.md
manager/: alembic.ini  pyproject.toml
manager/alembic/: env.py
manager/alembic/versions/: 0001_initial.py  0002_pgbackrest_wal.py  0003_logs.py  0004_jobs.py  0005_alerts_forecast.py  0006_patroni_state.py  0007_backup_schedules.py  0008_job_artifacts.py
manager/pct_manager/: __init__.py  auth.py  bootstrap.py  cli.py  config.py  db.py  main.py  models.py  partitions.py  scheduler.py  schedules.py  schemas.py  web.py
manager/pct_manager/alerter/: __init__.py  dispatcher.py  forecast.py  notifiers.py  rules.py
manager/pct_manager/routes/: agents.py  alerts.py  auth.py  clusters.py  jobs.py  logs.py  schedules.py
manager/tests/: conftest.py  test_jobs_artifacts.py
web/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  keys.ts  types.ts
web/src/auth/: AuthContext.tsx
web/src/charts/: RetentionTimeline.tsx  WalSparkline.tsx
web/src/components/: Layout.tsx  ProtectedRoute.tsx
web/src/lib/: cn.ts  format.ts
web/src/pages/: Alerts.tsx  Cluster.tsx  Dashboard.tsx  Jobs.tsx  Login.tsx  Logs.tsx
web/src/rca/: rules.ts
(+25 files in other folders)
