[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pct-agent"
version = "0.1.0"
description = "Postgres Control Tower — Agent (runs on each PostgreSQL host)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "psycopg[binary]>=3.1",
]

[project.scripts]
pct-agent = "pct_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pct_agent"]
